--- a/IPark-Gwanggyo/templates/index.html
+++ b/IPark-Gwanggyo/templates/index.html
@@ -6,5 +6,10 @@
     <body>
         <h1>Yogyui Gwanggyo IPark Home Network</h1>
         <a href="/packet_sender">Packet Sender</a>
+        <br>
+        <a href="/packet_log">Packet Logger</a>
+        <br>
+        <a href="/outlet">Outlet Info</a>
+        <br>
     </body>
 </html>
