--- a/IPark-Gwanggyo/web/templates/outlet.html
+++ b/IPark-Gwanggyo/web/templates/outlet.html
@@ -1,23 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% from "render.html" import render_field %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>Outlet Status</h1>
 </div>
-<div>
-    <h1>Room 1</h1>
-    <h2>Outlet1: <a id="room1_outlet1"></a></h2>
-    <h2>Outlet2: <a id="room1_outlet2"></a></h2>
-    <h2>Outlet3: <a id="room1_outlet3"></a></h2>
 
-    <h1>Room 2</h1>
-    <h2>Outlet1: <a id="room2_outlet1"></a></h2>
-    <h2>Outlet2: <a id="room2_outlet2"></a></h2>
-
-    <h1>Room 3</h1>
-    <h2>Outlet1: <a id="room3_outlet1"></a></h2>
-    <h2>Outlet2: <a id="room3_outlet2"></a></h2>
+<div class="col-md-6">
+    {{ wtf.quick_form(form, id="form") }}
 </div>
 {% endblock %}
 
@@ -28,13 +19,13 @@ setInterval(function() {$.ajax({
     url: '/api/outlet_info/update',
     type: 'POST',
     success: function(response) {
-        $("#room1_outlet1").html(response["room1_outlet1"] + ' W');
-        $("#room1_outlet2").html(response["room1_outlet2"] + ' W');
-        $("#room1_outlet3").html(response["room1_outlet3"] + ' W');
-        $("#room2_outlet1").html(response["room2_outlet1"] + ' W');
-        $("#room2_outlet2").html(response["room2_outlet2"] + ' W');
-        $("#room3_outlet1").html(response["room3_outlet1"] + ' W');
-        $("#room3_outlet2").html(response["room3_outlet2"] + ' W');
+        document.getElementById("outlet_1_1").value = response["room1_outlet1"] + ' W';
+        document.getElementById("outlet_1_2").value = response["room1_outlet2"] + ' W';
+        document.getElementById("outlet_1_3").value = response["room1_outlet3"] + ' W';
+        document.getElementById("outlet_2_1").value = response["room2_outlet1"] + ' W';
+        document.getElementById("outlet_2_2").value = response["room2_outlet2"] + ' W';
+        document.getElementById("outlet_3_1").value = response["room3_outlet1"] + ' W';
+        document.getElementById("outlet_3_2").value = response["room3_outlet2"] + ' W';
     },
     error: function(error) {
          console.log(error);
