--- a/Hillstate-Gwanggyosan/web/templates/index.html
+++ b/Hillstate-Gwanggyosan/web/templates/index.html
@@ -22,7 +22,8 @@
     </button>
     {% endif %}
     -->
-    <h3><a href="{{ url_for('api.light_ctrl') }}">조명 제어</a></h3>
+    <h3><a href="{{ url_for('api.light_ctrl') }}">조명</a></h3>
+    <h3><a href="{{ url_for('api.outlet_ctrl') }}">콘센트</a></h3>
 </div>
 {% endblock %}
 
