- 엘리베이터 구현 고도화 (state 상세 구분)

--- a/Hillstate-Gwanggyosan/web/templates/base.html
+++ b/Hillstate-Gwanggyosan/web/templates/base.html
@@ -30,6 +30,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('api.light_ctrl') }}">조명</a></li>
                 <li><a href="{{ url_for('api.outlet_ctrl') }}">콘센트</a></li>
+                <li><a href="{{ url_for('api.elevator_ctrl') }}">엘리베이터</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
