- webserver packet logger

--- a/Hillstate-Gwanggyosan/web/templates/base.html
+++ b/Hillstate-Gwanggyosan/web/templates/base.html
@@ -31,6 +31,7 @@
                 <li><a href="{{ url_for('api.light_ctrl') }}">조명</a></li>
                 <li><a href="{{ url_for('api.outlet_ctrl') }}">콘센트</a></li>
                 <li><a href="{{ url_for('api.elevator_ctrl') }}">엘리베이터</a></li>
+                <li><a href="{{ url_for('api.packet_logger') }}">패킷</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
