--- a/Hillstate-Gwanggyosan/web/templates/index.html
+++ b/Hillstate-Gwanggyosan/web/templates/index.html
@@ -25,6 +25,7 @@
     <h3><a href="{{ url_for('api.light_ctrl') }}">조명</a></h3>
     <h3><a href="{{ url_for('api.outlet_ctrl') }}">콘센트</a></h3>
     <h3><a href="{{ url_for('api.elevator_ctrl') }}">엘리베이터</a></h3>
+    <h3><a href="{{ url_for('api.packet_logger') }}">패킷</a></h3>
 </div>
 {% endblock %}
 
