--- a/Hillstate-Gwanggyosan/web/templates/elevator_ctrl.html
+++ b/Hillstate-Gwanggyosan/web/templates/elevator_ctrl.html
@@ -6,10 +6,15 @@
     <h1>엘리베이터</h1>
 </div>
 <div>
+    <form method="post" action="/api/elevator_ctrl" enctype="text/plain">
+        <input type="submit" value="CALL(DOWN)" name="command_call_down" style="font-size: 6em;">
+    </form>
+    <br>
+
     <h1>[ Current Time] </h1>
     <h1 id="time">
-        {% if time %}
-            {{ time }}
+        {% if current_time %}
+            {{ current_time }}
         {% endif %}
     </h1>
 
@@ -18,23 +23,7 @@
         {% if state %}
             {{ state }}
         {% endif %}
-    </h1>
-
-    <h1>[ Floor ]</h1>
-    <h1 id="floor1">
-        {% if floor1 %}
-            {{ floor1 }}
-        {% endif %}
-    </h1>
-    <h1 id="floor2">
-        {% if floor2 %}
-            {{ floor2 }}
-        {% endif %}
-    </h1>
-
-    <form method="post" action="/api/elevator_ctrl" enctype="text/plain">
-        <input type="submit" value="CALL" name="command" style="font-size: 6em;">
-    </form>
+    </h1>    
 </div>
 
 {% endblock %}
@@ -46,14 +35,12 @@ setInterval(function() { $.ajax({
     url: '/api/elevator_ctrl/update',
     type: 'POST',
     success: function(response) {
-        $("#time").html(response["time"]);
+        $("#time").html(response["current_time"]);
         $("#state").html(response["state"]);
-        $("#floor1").html(response["floor1"]);
-        $("#floor2").html(response["floor2"]);
     },
     error: function(error) {
         console.log(error);
     }
-})}, 250);
+})}, 50);
 </script>
 {% endblock %}
