--- a/Hillstate-Gwanggyosan/web/templates/packet_logger.html
+++ b/Hillstate-Gwanggyosan/web/templates/packet_logger.html
@@ -35,6 +35,14 @@
     <label><input type="checkbox" id="check_various_header_48" onclick="onCheckHeaderVarious(0x48)" {% if enable_header_various_48==1 %} checked {% endif %}>0x48 (??)</label>
     <br>
     <div id="textbox_various" style="height:300px; width: 100%; border: 1px solid #ccc; overflow-x: scroll; overflow-y: scroll; overflow-wrap: break-word;"></div>
+
+    <h2>주방 비디오폰</h2>
+    <form action="/api/packet_logger/clear/videophone" method="POST">
+        <input type="submit" value="CLEAR">
+    </form>
+    <label><input type="checkbox" id="check_videophone_enable" onclick="onCheckHeaderVideophone()" {% if enable_videophone==1 %} checked {% endif %}>Enable</label>
+    <br>
+    <div id="textbox_videophone" style="height:300px; width: 100%; border: 1px solid #ccc; overflow-x: scroll; overflow-y: scroll; overflow-wrap: break-word;"></div>
 </div>
 
 {% endblock %}
@@ -50,6 +58,7 @@
             success: function(response) {
                 $("#textbox_light").html(response["light"]);
                 $("#textbox_various").html(response["various"]);
+                $("#textbox_videophone").html(response["videophone"]);
             },
             error: function(error) {
                 console.log(error);
@@ -130,6 +139,20 @@
             newForm.append($('<input/>', {type: 'hidden', name: 'value', value: Number(checked)}));
         }
 
+        newForm.appendTo('body');
+        newForm.submit();
+        document.getElementById("temp").remove();
+    }
+
+    function onCheckHeaderVideophone() {
+        var newForm = $('<form></form>');
+        newForm.attr("id", "temp");
+        newForm.attr("method", "POST");
+
+        var checked = document.getElementById("check_videophone_enable").checked;
+        newForm.attr("action", "/api/packet_logger/enable/videophone/00");
+        newForm.append($('<input/>', {type: 'hidden', name: 'value', value: Number(checked)}));
+        
         newForm.appendTo('body');
         newForm.submit();
         document.getElementById("temp").remove();
