- rs485 line busy issue (for debugging) - device on/off timer web page (prototype)

--- a/Hillstate-Gwanggyosan/web/templates/base.html
+++ b/Hillstate-Gwanggyosan/web/templates/base.html
@@ -33,6 +33,7 @@
                 <li><a href="{{ url_for('api.elevator_ctrl') }}">엘리베이터</a></li>
                 <li><a href="{{ url_for('api.packet_logger') }}">패킷</a></li>
                 <li><a href="{{ url_for('api.hems') }}">HEMS</a></li>
+                <li><a href="{{ url_for('api.timer') }}">타이머</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
