--- a/Hillstate-Gwanggyosan/web/templates/index.html
+++ b/Hillstate-Gwanggyosan/web/templates/index.html
@@ -27,6 +27,7 @@
     <h3><a href="{{ url_for('api.elevator_ctrl') }}">엘리베이터</a></h3>
     <h3><a href="{{ url_for('api.packet_logger') }}">패킷</a></h3>
     <h3><a href="{{ url_for('api.hems') }}">HEMS</a></h3>
+    <h3><a href="{{ url_for('api.timer') }}">타이머</a></h3>
 </div>
 {% endblock %}
 
