--- a/Hillstate-Gwanggyosan/web/static/styles.css
+++ b/Hillstate-Gwanggyosan/web/static/styles.css
@@ -35,3 +35,72 @@ body {
 .navbar-inverse .navbar-brand {
     color: #ffffff;
 }
+
+.toggle {
+    --width: 40px;
+    --height: calc(var(--width) / 2);
+    --border-radius: calc(var(--height) / 2);
+
+    display: inline-block;
+    cursor: pointer;
+}
+
+.toggle__input {
+    display: none;
+}
+
+.toggle__fill {
+    position: relative;
+    width: var(--width);
+    height: var(--height);
+    border-radius: var(--border-radius);
+    background: #dddddd;
+    transition: background 0.2s;
+}
+
+.toggle__fill::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: var(--height);
+    width: var(--height);
+    background: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    border-radius: var(--border-radius);
+    transition: transform 0.2s;
+}
+
+.toggle__input:checked ~ .toggle__fill {
+    background: #009578;
+}
+
+.toggle__input:checked ~ .toggle__fill::after {
+    transform: translateX(var(--height));
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: inner-spin-button !important;
+  opacity: 1 !important;
+  width: 80px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  background-color: blue !important;
+  border: 2.5px solid red !important;
+}
+
+input[type=number] {
+  position: relative;
+  padding: 5px;
+  width: 80px;
+  padding-right: 25px;
+  height: 30px;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 2rem;
+  border: 1px solid #9c9c9c !important;
+  border-radius: 0.2em;
+}
