--- a/Hillstate-Gwanggyosan/web/templates/elevator_ctrl.html
+++ b/Hillstate-Gwanggyosan/web/templates/elevator_ctrl.html
@@ -7,7 +7,8 @@
 </div>
 <div>
     <form method="post" action="/api/elevator_ctrl" enctype="text/plain">
-        <input type="submit" value="CALL(DOWN)" name="command_call_down" style="font-size: 6em;">
+        <input type="submit" value="CALL(DOWN)" name="command_call_down" style="font-size: 4em;">
+        <input type="submit" value="CALL(UP)" name="command_call_up" style="font-size: 4em;">
     </form>
     <br>
 
